# Code

lab1/: README.md  matrix_mult.cpp  verify_results.py
lab2/: CMakeLists.txt  README.md  matrix_mult_omp.cpp  perf_test_omp.cpp  run.bat  verify_results_omp.py
lab3/: CMakeLists.txt  README.md  perf_test_mpi.cpp  run.bat  verify_results_mpi.py
lab4/: CMakeLists.txt  README.md  matrix_mult_cuda.cu  perf_test_cuda.cu  run.bat  verify_results_cuda.py
lab5/: README.md  mat  matrix_mult_mpi.cpp  startMPI.pbs
